Added tests for renaming stopped servers.